--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Hovězí maso a rozličná jeho úprava</h1></a>
+<h1><a href="index.html">Hovězí maso a rozličná jeho úprava</a></h1>
 
 <a id="obycejne-hovezi-maso"><h2>Obyčejné hovězí maso</h2></a>
 
