--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<a href="about.html" class="hlavicka"><h1>Domácí kuchařka</h1></a>
+<h1><a href="about.html">Domácí kuchařka</a></h1>
 
 <ul>
 <li><a href="predmluva.html">Předmluva</a></li>
