--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Nákypy</h1></a>
+<h1><a href="index.html">Nákypy</a></h1>
 
 <a id="nakyp-z-jablek"><h2>Nákyp z jablek</h2></a>
 
