--- a/src/pastyky.html
+++ b/src/pastyky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Paštyky</h1></a>
+<h1><a href="index.html">Paštyky</a></h1>
 
 <a id="krehke-testo-k-pastykam"><h2>Křehké těsto k paštykám</h2></a>
 
