--- a/src/pecene.html
+++ b/src/pecene.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Pečené</h1></a>
+<h1><a href="index.html">Pečené</a></h1>
 
 <a id="hovezi-pecene"><h2>Hovězí pečeně</h2></a>
 
