--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Rybí a postní polívky</h1></a>
+<h1><a href="index.html">Rybí a postní polívky</a></h1>
 
 <a id="petruzelova-voda"><h2>Petruželová voda</h2></a>
 
