--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Cukrovinky</h1></a>
+<h1><a href="index.html">Cukrovinky</a></h1>
 
 <a id="pokroutky-z-horkych-mandli"><h2>Pokroutky z hořkých mandlí</h2></a>
 
