--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Dodatek</h1></a>
+<h1><a href="index.html">Dodatek</a></h1>
 
 <a id="jak-se-delaji-jaternice-jelita-a-klobasy"><h2>Jak se dělají jaternice, jelita a klobásy</h2></a>
 
