--- a/src/dorty.html
+++ b/src/dorty.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Dorty</h1></a>
+<h1><a href="index.html">Dorty</a></h1>
 
 <a id="cerny-chlebovy-dort"><h2>Černý chlebový dort</h2></a>
 
