--- a/src/jeste-nektera-postni-jidla.html
+++ b/src/jeste-nektera-postni-jidla.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Ještě některá postní jídla</h1></a>
+<h1><a href="index.html">Ještě některá postní jídla</a></h1>
 
 <a id="karbanatky-a-klobasy-z-kapra"><h2>Karbanátky a klobásy z kapra</h2></a>
 
