--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Kompoty</h1></a>
+<h1><a href="index.html">Kompoty</a></h1>
 
 <a id="kompot-z-cerstvych-visni"><h2>Kompot z čerstvých višní</h2></a>
 
