--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Ledy rozličných barev</h1></a>
+<h1><a href="index.html">Ledy rozličných barev</a></h1>
 
 <p>K ozdobení dortů a cukrovinek.</p>
 
