--- a/src/masite-rosoly.html
+++ b/src/masite-rosoly.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Masité rosoly</h1></a>
+<h1><a href="index.html">Masité rosoly</a></h1>
 
 <a id="aspik"><h2>Aspik</h2></a>
 
