--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Moučná jídla, obyčejná i jemnější</h1></a>
+<h1><a href="index.html">Moučná jídla, obyčejná i jemnější</a></h1>
 
 <a id="moucne-knedliky"><h2>Moučné knedlíky</h2></a>
 
