--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Nádivky do koláčů, buchtiček a koblih</h1></a>
+<h1><a href="index.html">Nádivky do koláčů, buchtiček a koblih</a></h1>
 
 <a id="povidla"><h2>Povidla</h2></a>
 
