--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Naloženiny k hovězímu masu</h1></a>
+<h1><a href="index.html">Naloženiny k hovězímu masu</a></h1>
 
 <a id="okurky-ve-vode-nalozene"><h2>Okurky ve vodě naložené</h2></a>
 
