--- a/src/napoje.html
+++ b/src/napoje.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Nápoje</h1></a>
+<h1><a href="index.html">Nápoje</a></h1>
 
 <a id="citronova-voda"><h2>Citronová voda</h2></a>
 
