--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Omáčky k hovězímu masu</h1></a>
+<h1><a href="index.html">Omáčky k hovězímu masu</a></h1>
 
 <a id="omacka-cibulkova"><h2>Omáčka cibulková</h2></a>
 
