--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Ovocní zavařeninky</h1></a>
+<h1><a href="index.html">Ovocní zavařeninky</a></h1>
 
 <p>Hodí se k nadívání dortů, koblih a jiných pamlsek.</p>
 
