--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Raci, žáby, šneci a mušle</h1></a>
+<h1><a href="index.html">Raci, žáby, šneci a mušle</a></h1>
 
 <a id="raci-s-omackou"><h2>Raci s omáčkou</h2></a>
 
