--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Rozličná másla</h1></a>
+<h1><a href="index.html">Rozličná másla</a></h1>
 
 <a id="raci-maslo"><h2>Račí máslo</h2></a>
 
