--- a/src/rozlicne-miseninky.html
+++ b/src/rozlicne-miseninky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Rozličné míšeninky</h1></a>
+<h1><a href="index.html">Rozličné míšeninky</a></h1>
 
 <a id="miseninka-majorankova"><h2>Míšeninka majoránková</h2></a>
 
