--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Rozličné octy</h1></a>
+<h1><a href="index.html">Rozličné octy</a></h1>
 
 <a id="ocet-estragonovy"><h2>Ocet estragonový</h2></a>
 
