--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Rozličné ryby</h1></a>
+<h1><a href="index.html">Rozličné ryby</a></h1>
 
 <a id="kapr-na-cerno"><h2>Kapr na černo</h2></a>
 
