--- a/src/salaty.html
+++ b/src/salaty.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Saláty</h1></a>
+<h1><a href="index.html">Saláty</a></h1>
 
 <a id="salat-hlavkovy"><h2>Salát hlávkový</h2></a>
 
