--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Smaženiny, pofézky, svítky a kotletky</h1></a>
+<h1><a href="index.html">Smaženiny, pofézky, svítky a kotletky</a></h1>
 
 <p><b>(Těchto věcí možno použiti co obložků k zeleninám, o nichžto v příštím oddílu pojednáno jest)</b></p>
 
