--- a/src/uvod.html
+++ b/src/uvod.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Úvod</h1></a>
+<h1><a href="index.html">Úvod</a></h1>
 
 <a id="dulezite-predbezne-pouceni"><h2>Důležité předběžné poučení</h2></a>
 
