--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Zadělávaná a dušená jídla</h1></a>
+<h1><a href="index.html">Zadělávaná a dušená jídla</a></h1>
 
 <a id="kurata-s-knedlickami"><h2>Kuřata s knedlíčkami</h2></a>
 
