--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Zadělávaná zvěřina</h1></a>
+<h1><a href="index.html">Zadělávaná zvěřina</a></h1>
 
 <a id="cerna-zverina"><h2>Černá zvěřina</h2></a>
 
