--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -1,4 +1,4 @@
-<a href="index.html" class="hlavicka"><h1>Zeleniny</h1></a>
+<h1><a href="index.html">Zeleniny</a></h1>
 
 <a id="kadernik-s-klobasou"><h2>Kadeřník s klobásou</h2></a>
 
