--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -1,6 +1,6 @@
 <h1><a href="index.html">Smaženiny, pofézky, svítky a kotletky</a></h1>
 
-<p><b>(Těchto věcí možno použiti co obložků k zeleninám, o nichžto v příštím oddílu pojednáno jest)</b></p>
+<p>Těchto věcí možno použiti co obložků k zeleninám, o nichžto v příštím oddílu pojednáno jest.</p>
 
 <a id="smazena-kuratka"><h2>Smažená kuřátka</h2></a>
 
