--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -80,7 +80,7 @@
 
 <a id="nudle-s-mandlemi"><h2>Nudle s mandlemi</h2></a>
 
-<p>Udělej <b><i>ze</i></b> dvou vajec nudlí jako k maštění, uvař je ve slané vodě, oceď je, rozkrájej drobně dva loty sladkých mandli, dej nudle na mísu, mandle k nim, pak dva loty tlučeného cukru a kousek vanilie, vlej do toho asi tři čtvrtky sladké vařené smetany, zamíchej to, vymaž mísu máslem, vlej to do ní, poklad to máslem a nech to v troubě vysmahnout, pak to posyp cukrem.</p>
+<p>Udělej ze dvou vajec nudlí jako k maštění, uvař je ve slané vodě, oceď je, rozkrájej drobně dva loty sladkých mandli, dej nudle na mísu, mandle k nim, pak dva loty tlučeného cukru a kousek vanilie, vlej do toho asi tři čtvrtky sladké vařené smetany, zamíchej to, vymaž mísu máslem, vlej to do ní, poklad to máslem a nech to v troubě vysmahnout, pak to posyp cukrem.</p>
 
 <a id="nudle-s-rakami"><h2>Nudle s rakami</h2></a>
 
@@ -156,7 +156,7 @@
 
 <a id="zemlickove-nadivane-livanecky"><h2>Žemličkové nadívané lívanečky</h2></a>
 
-<p>Ustrouhej 4 žemličky, dej je do hrnku, vraz do toho <b><i>8</i></b> vajec, vlej do toho žejdlík smetany, dej k tomu drobně rozkrájené citronové kůry, trochu květu, 3 loty cukru, a všecko v hrnci dobře umíchej; nyní vezmi plech s důlkama, dej do každého důlku trochu rozpuštěného másla, lžičku toho těstíčka, lžičku dobře slazených, hřebíčkem á. citronovou kůrou připravených povidel, na to zase lžičku těstíčka a pokrop to zase máslem; když jsou lívanečky na jedné straně upečeny, obrat je, a pokračuj tak pořád, až všecky upečeš; pak je omoč v rozpuštěném másle, urovnej je na mísu a posyp je skořicí a cukrem. Také se můžou péct nenadívané, a pak skořici a cukrem posypat.</p>
+<p>Ustrouhej 4 žemličky, dej je do hrnku, vraz do toho 8 vajec, vlej do toho žejdlík smetany, dej k tomu drobně rozkrájené citronové kůry, trochu květu, 3 loty cukru, a všecko v hrnci dobře umíchej; nyní vezmi plech s důlkama, dej do každého důlku trochu rozpuštěného másla, lžičku toho těstíčka, lžičku dobře slazených, hřebíčkem a citronovou kůrou připravených povidel, na to zase lžičku těstíčka a pokrop to zase máslem; když jsou lívanečky na jedné straně upečeny, obrat je, a pokračuj tak pořád, až všecky upečeš; pak je omoč v rozpuštěném másle, urovnej je na mísu a posyp je skořicí a cukrem. Také se můžou péct nenadívané, a pak skořici a cukrem posypat.</p>
 
 <a id="zemlickove-rizky-s-hovezim-tokem"><h2>Žemličkové řízky s hovězím tokem</h2></a>
 
