--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -100,7 +100,7 @@
 
 <a id="kren-kysely"><h2>Křen kyselý</h2></a>
 
-<p>Ustrotíhej jedno červené jablko a dej ho do omáčníku, taktéž i křen, přidej k tomu kus na citronové kůře ustrouhaného cukru a nalej na to tolik octa, až je všecko pokryto, pak tím zamíchej a dej to na stůl<b></b></p>
+<p>Ustrotíhej jedno červené jablko a dej ho do omáčníku, taktéž i křen, přidej k tomu kus na citronové kůře ustrouhaného cukru a nalej na to tolik octa, až je všecko pokryto, pak tím zamíchej a dej to na stůl.</p>
 
 <a id="horcice"><h2>Hořčice</h2></a>
 
