--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -36,7 +36,7 @@
 
 <a id="nakyp-ze-strouhanky"><h2>Nákyp ze strouhanky</h2></a>
 
-<p>Udělej ze třech žloutků hodně tuhé těsto, z tohoto pak jemnou strouhanku, zavař ji do vařící smetany, aby <b><i>z</i></b> toho byla hustá kaše, a nech ji vychladnout; potom utři kousek másla, dej do něho tu kaši, přiměj k tomu 6 žloutků, 6 lotů tlučeného, na celém citronu ostrouhaného cukru a ze šesti bílků sníh, vymaž formu máslem, vysyp ji strouhanou žemličkou, vlej to do ni a nech to hezký do zlatova vypéct; pak to vyklop, posyp cukrem a nes na stůl.</p>
+<p>Udělej ze třech žloutků hodně tuhé těsto, z tohoto pak jemnou strouhanku, zavař ji do vařící smetany, aby z toho byla hustá kaše, a nech ji vychladnout; potom utři kousek másla, dej do něho tu kaši, přiměj k tomu 6 žloutků, 6 lotů tlučeného, na celém citronu ostrouhaného cukru a ze šesti bílků sníh, vymaž formu máslem, vysyp ji strouhanou žemličkou, vlej to do ni a nech to hezký do zlatova vypéct; pak to vyklop, posyp cukrem a nes na stůl.</p>
 
 <a id="nakyp-z-kapaneho-testa"><h2>Nákyp z kapaného těsta</h2></a>
 
@@ -162,7 +162,7 @@
 
 <a id="nakyp-s-piskotami-nebo-s-vanilovymi-kabinkami"><h2>Nákyp s piškotami nebo s vanilovými kabinkami</h2></a>
 
-<p>Vraz do hrnečku 4 žloutky, vmíchej do nich znenáhla 4 vrchovaté lžíce pěkné mouky a žejdlík* sladké smetany, aby se z toho umíchalo hladounké těstíčko, načež ho vlej na kastrol á nech ho na horké plotně při ustavičném míchání zvařit v hustou kaši, pak tím pořád míchej, až to vychladneš Utři na míse 4 loty čerstvého másla, dej do něho tu kaši, vraz do toho 6 žloutků, každý dobře zamíchej, dej k tomu 4 loty tlučeného cukru a 4 loty oloupaných drobně rozkrájených sladkých mandlí, dobře to umíchej, pak dej k tomu tuhý sníh z těch šesti bílků, nalámej do toho 4 loty piškotů nebo vanilových hubinek, a ještě to lehounce zamíchej; nyní vymaž máslem dvě melounové formy, vylož je vanilovými hubinkami, vysyp strouhanou žemličkou, nalej do nich tu míchaninku a nech to dříve půl hodiny ve vodě vařit, pak v horké troubě do zlatova upect; potom to vyklop, posyp tlučeným cukrem a dej to na tabuli buď jen tak, aneb udělej vůkol mísy věnec z hustého šodó<b></b></p>
+<p>Vraz do hrnečku 4 žloutky, vmíchej do nich znenáhla 4 vrchovaté lžíce pěkné mouky a žejdlík* sladké smetany, aby se z toho umíchalo hladounké těstíčko, načež ho vlej na kastrol á nech ho na horké plotně při ustavičném míchání zvařit v hustou kaši, pak tím pořád míchej, až to vychladneš Utři na míse 4 loty čerstvého másla, dej do něho tu kaši, vraz do toho 6 žloutků, každý dobře zamíchej, dej k tomu 4 loty tlučeného cukru a 4 loty oloupaných drobně rozkrájených sladkých mandlí, dobře to umíchej, pak dej k tomu tuhý sníh z těch šesti bílků, nalámej do toho 4 loty piškotů nebo vanilových hubinek, a ještě to lehounce zamíchej; nyní vymaž máslem dvě melounové formy, vylož je vanilovými hubinkami, vysyp strouhanou žemličkou, nalej do nich tu míchaninku a nech to dříve půl hodiny ve vodě vařit, pak v horké troubě do zlatova upect; potom to vyklop, posyp tlučeným cukrem a dej to na tabuli buď jen tak, aneb udělej vůkol mísy věnec z hustého šodó.</p>
 
 <a id="nakyp-z-prazeneho-cukru"><h2>Nákyp z praženého cukru</h2></a>
 
