--- a/src/dorty.html
+++ b/src/dorty.html
@@ -40,7 +40,7 @@
 
 <a id="dort-mramorovy"><h2>Dort mramorový</h2></a>
 
-<p>Udělá se těsto zcela tak jako v předešlém receptu, pak se rozdělí na pět dílů, do jednoho dílu se dá čtvrt libry drobně na struhadle ustrouhané čokolády do druhého čtvrt libry drobnince rozkrájených pistacií, do třetího trochu karmínu, a dva díly se nechají žluté; potom se vymaže forma, vyloží se papírem, dává se do ní po lžíci střídavě pěkně jedno vedle druhého, až je všecko ve formě, a nechá se to zlehounka pect; pak se dort vyklopí a jako předešlý okrášlí.</p>
+<p>Udělá se těsto zcela tak jako v předešlém předpisu, pak se rozdělí na pět dílů, do jednoho dílu se dá čtvrt libry drobně na struhadle ustrouhané čokolády do druhého čtvrt libry drobnince rozkrájených pistacií, do třetího trochu karmínu, a dva díly se nechají žluté; potom se vymaže forma, vyloží se papírem, dává se do ní po lžíci střídavě pěkně jedno vedle druhého, až je všecko ve formě, a nechá se to zlehounka pect; pak se dort vyklopí a jako předešlý okrášlí.</p>
 
 <a id="piskotovy-dort-se-zavareninkou"><h2>Piškotový dort se zavařeninkou</h2></a>
 
