--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -58,7 +58,7 @@
 
 <a id="beefsteak-se-sardelemi"><h2>Beefsteak se sardelemi</h2></a>
 
-<p>Nakrájej řízky ze svíčkové pečené jako v předešlém receptu, naklepej, osol a vhod je do rozpálené mastnoty; nejdéle za deset minut jsou dost; potom je vyndej a polož na každý řízek kousek sardelového másla. Chceš-li je míti ještě úpravnější, tedy udělej tolik sazených vajec, kolik máš řízků, pak těmi vejci hezky oblož, posyp je nakrájenou pažitkou a nes to na stůl.</p>
+<p>Nakrájej řízky ze svíčkové pečené jako v předešlém předpisu, naklepej, osol a vhod je do rozpálené mastnoty; nejdéle za deset minut jsou dost; potom je vyndej a polož na každý řízek kousek sardelového másla. Chceš-li je míti ještě úpravnější, tedy udělej tolik sazených vajec, kolik máš řízků, pak těmi vejci hezky oblož, posyp je nakrájenou pažitkou a nes to na stůl.</p>
 
 <a id="karbanatky-ze-svickove-pecene"><h2>Karbanátky ze svíčkové pečeně</h2></a>
 
