--- a/src/masite-rosoly.html
+++ b/src/masite-rosoly.html
@@ -8,7 +8,7 @@
 
 <a id="teleci-mozky-v-aspiku"><h2>Telecí mozky v aspiku</h2></a>
 
-<p>Omej tři telecí mozky, stáhni s nich mázdry a vlož je do studené vody; dej na kastrol kus na tenké lístky pokrájené slaniny, jednu cibuli, půl kořenu petružele, půl mrkve, všecko na koláčky nakrájeno, několik zrnek celého pepře, jeden rozdrobený bobkový list, dva hřebíčky, a nech to přikryté chvilku dusit, pak na to vlož ty mozky, přiced k nim šťávu z jednoho citronu, osol je a nech je dusit; chvílemi však přilévej po lžíci vody nebo polívky a dej pozor, aby nezčervenaly; potom je opatrně vyndej, rozděl každý na čtyry díly a nech je vychladnout. Nyní omoč formu ve studené vodě, nalej do ní na prst vysoko podle předešlého receptu upraveného vychladlého aspiku a nech ho buď na ledě nebo v jiném studeném místě ztuhnout, načež naň mozečky pěkně urovnej, ale tak, aby mezi nimi a krajem formy zůstala mezera, pak na ně zase nalej studeného tekutého aspiku tolik, až jsou mozky ním pokryty, a nech to ve studeném místě nebo u ledu ztuhnout. Když to chceš dáti na stůl, omoč formu v horké vodě, poklop na ni mělkou mísu, obrať to a formu opatrně zvedej; kdyby rosol při ní ještě držel, tedy ohřej nějaký šat a formu ním všude natírej, až rosol odpadne, načež ho postav ještě na chvíli do studena, pak ho okrášli citronovými lístky a koláčky. Máš-li právě uvařený hovězí jazyk, můžeš nim mozečky proložit.</p>
+<p>Omej tři telecí mozky, stáhni s nich mázdry a vlož je do studené vody; dej na kastrol kus na tenké lístky pokrájené slaniny, jednu cibuli, půl kořenu petružele, půl mrkve, všecko na koláčky nakrájeno, několik zrnek celého pepře, jeden rozdrobený bobkový list, dva hřebíčky, a nech to přikryté chvilku dusit, pak na to vlož ty mozky, přiced k nim šťávu z jednoho citronu, osol je a nech je dusit; chvílemi však přilévej po lžíci vody nebo polívky a dej pozor, aby nezčervenaly; potom je opatrně vyndej, rozděl každý na čtyry díly a nech je vychladnout. Nyní omoč formu ve studené vodě, nalej do ní na prst vysoko podle předešlého předpisu upraveného vychladlého aspiku a nech ho buď na ledě nebo v jiném studeném místě ztuhnout, načež naň mozečky pěkně urovnej, ale tak, aby mezi nimi a krajem formy zůstala mezera, pak na ně zase nalej studeného tekutého aspiku tolik, až jsou mozky ním pokryty, a nech to ve studeném místě nebo u ledu ztuhnout. Když to chceš dáti na stůl, omoč formu v horké vodě, poklop na ni mělkou mísu, obrať to a formu opatrně zvedej; kdyby rosol při ní ještě držel, tedy ohřej nějaký šat a formu ním všude natírej, až rosol odpadne, načež ho postav ještě na chvíli do studena, pak ho okrášli citronovými lístky a koláčky. Máš-li právě uvařený hovězí jazyk, můžeš nim mozečky proložit.</p>
 
 <a id="rosol-z-teleci-hlavy-a-z-nozicek"><h2>Rosol z telecí hlavy a z nožiček</h2></a>
 
@@ -32,7 +32,7 @@
 
 <a id="kapoun-v-rosolu"><h2>Kapoun v rosolu</h2></a>
 
-<p>Dobře očištěný pěkný kapoun upraví se zcela tak jako krocan v předešlém receptu, jen že se dá méně vody a octa.</p>
+<p>Dobře očištěný pěkný kapoun upraví se zcela tak jako krocan v předešlém předpisu, jen že se dá méně vody a octa.</p>
 
 <a id="nadivany-kapoun-s-aspikem"><h2>Nadívaný kapoun s aspikem</h2></a>
 
