--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -216,7 +216,7 @@
 
 <a id="lite-strudle-cili-omeletky-s-povidlami"><h2>Lité štrudle čili omeletky s povidlami</h2></a>
 
-<p>Udělej těsto jako v předešlém receptu a lej z něho štrudličky; rozdělej povidla, ne však příliš řídce, oslad je, přidej k nim citronové kůry a trochu tlučené skořice, pak nimi pomaž ty štrudličky, zaviň je, urovnej na máslem vymazaný rendlík, poklad je povrchu máslem a nech je v troubě trochu vypéct, pak je posyp cukrem a nes na stůl.</p>
+<p>Udělej těsto jako v předešlém předpisu a lej z něho štrudličky; rozdělej povidla, ne však příliš řídce, oslad je, přidej k nim citronové kůry a trochu tlučené skořice, pak nimi pomaž ty štrudličky, zaviň je, urovnej na máslem vymazaný rendlík, poklad je povrchu máslem a nech je v troubě trochu vypéct, pak je posyp cukrem a nes na stůl.</p>
 
 <a id="lite-strudle-s-tvarohem"><h2>Lité štrudle s tvarohem</h2></a>
 
@@ -232,7 +232,7 @@
 
 <a id="kraple-se-spenatem"><h2>Kraple se špenátem</h2></a>
 
-<p>Přeber a vyper v několika vodách mladý špenát, pak na něj nalej vařící vodu a nech ho ovařit, potom vodu sceď a špenát na drobounko usekej. Skrájej drobně jednu cibuli a nech ji na másle spěnit, dej do toho tři vařečky mouky, pak ten špenát, osol ho, zamíchej a nech ho dusit; přilej ještě trochu hovězí polívky, vmíchej do něho asi tři žloutky, aby byl hezky hustý, a nech ho vystydnout. Udělej těsto jako v předešlém receptu a též tak ho rozválej, načež ho nadívej špenátem, kraple kružátkem vykrajuj, uvař je, posyp strouhanou žemličkovou kůrkou a polej rozpáleným máslem.</p>
+<p>Přeber a vyper v několika vodách mladý špenát, pak na něj nalej vařící vodu a nech ho ovařit, potom vodu sceď a špenát na drobounko usekej. Skrájej drobně jednu cibuli a nech ji na másle spěnit, dej do toho tři vařečky mouky, pak ten špenát, osol ho, zamíchej a nech ho dusit; přilej ještě trochu hovězí polívky, vmíchej do něho asi tři žloutky, aby byl hezky hustý, a nech ho vystydnout. Udělej těsto jako v předešlém předpisu a též tak ho rozválej, načež ho nadívej špenátem, kraple kružátkem vykrajuj, uvař je, posyp strouhanou žemličkovou kůrkou a polej rozpáleným máslem.</p>
 
 <a id="rejzova-kase"><h2>Rejžová kaše</h2></a>
 
