--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -288,7 +288,7 @@
 
 <a id="smazene-svestky"><h2>Smažené švestky</h2></a>
 
-<p>Uvař pěkné suché švestky, vytlač z nich pecky, a na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v předešlém receptu, obal v něm švestky, klad je.do rozpáleného přepouštěného másla a nech je do zlatova vysmažit; pak je posyp skořicí a cukrem a dej je na stůl.</p>
+<p>Uvař pěkné suché švestky, vytlač z nich pecky, a na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v předešlém předpisu, obal v něm švestky, klad je.do rozpáleného přepouštěného másla a nech je do zlatova vysmažit; pak je posyp skořicí a cukrem a dej je na stůl.</p>
 
 <a id="smazene-zavitky-s-jahodami"><h2>Smažené závitky s jahodami</h2></a>
 
