--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -28,7 +28,7 @@
 
 <a id="zavareninka-z-amarelek"><h2>Zavařeninka z amarelek</h2></a>
 
-<p>Na libru pěkných vyloupaných amarelek vezmi tři čtvrtě libry přetlučeného cukru, dej oboje na čistý rendlík a nech to právě tak vařit jako višně v předešlém receptu; když to vychladne, dej to do sklenic a obvaz je silným papírem.</p>
+<p>Na libru pěkných vyloupaných amarelek vezmi tři čtvrtě libry přetlučeného cukru, dej oboje na čistý rendlík a nech to právě tak vařit jako višně v předešlém předpisu; když to vychladne, dej to do sklenic a obvaz je silným papírem.</p>
 
 <a id="tresnova-zavareninka"><h2>Třešňová zavařeninka</h2></a>
 
