--- a/src/pastyky.html
+++ b/src/pastyky.html
@@ -70,7 +70,7 @@
 
 <p>Tímto výborným jídlem končím pojednání o masitých paštykách, jsouc toho přesvědčení, že v nynějších časových poměrech zřídka kdo takováto nákladná jídla strojiti se odhodlá, a jestliže se to přece v některé velké kuchyni stati může, tedy vtipná a zběhlá kuchařka snadno tento zde uvedený počet zdvojnásobnit dovede; tu př. dej <a href="#teleci-pastyka-s-plackami">místo ptáčků</a> odušená kuřata nebo holuby mezi faš, a máš kuřecí a holubí paštyku; nebo v této poslední dej místo zaječího – srnčí nebo jelení maso, a máš opět srnčí a jelení paštyku.</p>
 
-<p>V následujícím receptu pojednám ještě o rybí paštyce pro postní dni.</p>
+<p>V následujícím předpisu pojednám ještě o rybí paštyce pro postní dni.</p>
 
 <a id="pastyka-ze-stiky"><h2>Paštyka ze štiky</h2></a>
 
