--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -84,7 +84,7 @@
 
 <a id="michana-chlebova-polivka"><h2>Míchaná chlebová polívka</h2></a>
 
-<p>Usmaží se chléb a cibulka jako ku předešlé, nechá se však při hovězím mase vařit jedna nebo dvě kapusty (kolik je osob a mnoho-li polívky zapotřebí, dle toho se musí kuchařka řídit), jeden celer a jedna pěkná žlutá mrkev; když je vše uvařeno, rozkrájí se to na nudličky a dá se to do mísy. Chlebíček a cibulku dej do hrnku, nalej na to dobrou hovězí polívku a nech ji asi půl hodiny vařit, pak ji proceď do mísy. Vejce se též jako v předešlém receptu buď dají do mísy, nebo zvlášť okolo se nosí; také se mohou k této polívce dáti na krátké špalíčky ukroucené pečené klobásky.</p>
+<p>Usmaží se chléb a cibulka jako ku předešlé, nechá se však při hovězím mase vařit jedna nebo dvě kapusty (kolik je osob a mnoho-li polívky zapotřebí, dle toho se musí kuchařka řídit), jeden celer a jedna pěkná žlutá mrkev; když je vše uvařeno, rozkrájí se to na nudličky a dá se to do mísy. Chlebíček a cibulku dej do hrnku, nalej na to dobrou hovězí polívku a nech ji asi půl hodiny vařit, pak ji proceď do mísy. Vejce se též jako v předešlém předpisu buď dají do mísy, nebo zvlášť okolo se nosí; také se mohou k této polívce dáti na krátké špalíčky ukroucené pečené klobásky.</p>
 
 <a id="polivka-hneda-s-bazantem-nejmene-pro-12-osob"><h2>Polívka hnědá s bažantem, nejméně pro 12 osob</h2></a>
 
@@ -198,7 +198,7 @@
 
 <a id="polivka-se-svitecky-ze-zemcat"><h2>Polívka se svítečky ze zemčat</h2></a>
 
-<p>Uvař několik pěkných zemčátek, pak je oloupej a ustrouhej; utři na misce dva loty čerstvého másla, dej do něho tři lžíce ustrouhaných zemčátek, tři žloutky, tři lžíce smetany a lžíci pěkné mouky, trochu soli a hodně to utři, naposled do toho vmíchej ze třech bílků sníh a peč z toho svítečky jako v předešlém receptu, pak je rozkrájej, dej do mísy a nalej na ně vařící silnou polívku.</p>
+<p>Uvař několik pěkných zemčátek, pak je oloupej a ustrouhej; utři na misce dva loty čerstvého másla, dej do něho tři lžíce ustrouhaných zemčátek, tři žloutky, tři lžíce smetany a lžíci pěkné mouky, trochu soli a hodně to utři, naposled do toho vmíchej ze třech bílků sníh a peč z toho svítečky jako v předešlém předpisu, pak je rozkrájej, dej do mísy a nalej na ně vařící silnou polívku.</p>
 
 <a id="polivka-se-svitecky-krupicnymi"><h2>Polívka se svítečky krupičnými</h2></a>
 
