--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -26,7 +26,7 @@
 
 <a id="zavitky-s-michaninkou"><h2>Závitky s míchaninkou</h2></a>
 
-<p>Udělej z půl žejdlíka smetany dle popisu v předešlých receptech hustou kaši a nech ji vystydnout. Dej na rendlík kus másla, drobně rozkrájenou cibuli, vlož na to kus telecího masa a nech ho do měkká udusit; pak maso vyndej a na drobno usekej, taktéž čtyry na tvrdo uvařené vejce a tři očištěné sardele, načež všecko vmíchej do té vychladlé kaše; nyní nastřihej z oplatku čtyrhrané kousky, dej na každý kousek trochu té míchaniny, zaviň je, omoč nejprve v rozkloktaném vejci, pak je obal ve strouhané žemličce a usmaž je do zlatová buď v převařeném másle nebo sádle; potom závitky urovnej na misku, okrášli je citronovými koláčky a zelenou petruželkou, a nes je na stůl.</p>
+<p>Udělej z půl žejdlíka smetany dle popisu v předešlých předpisech hustou kaši a nech ji vystydnout. Dej na rendlík kus másla, drobně rozkrájenou cibuli, vlož na to kus telecího masa a nech ho do měkká udusit; pak maso vyndej a na drobno usekej, taktéž čtyry na tvrdo uvařené vejce a tři očištěné sardele, načež všecko vmíchej do té vychladlé kaše; nyní nastřihej z oplatku čtyrhrané kousky, dej na každý kousek trochu té míchaniny, zaviň je, omoč nejprve v rozkloktaném vejci, pak je obal ve strouhané žemličce a usmaž je do zlatová buď v převařeném másle nebo sádle; potom závitky urovnej na misku, okrášli je citronovými koláčky a zelenou petruželkou, a nes je na stůl.</p>
 
 <a id="teleci-rizky-se-sardelemi"><h2>Telecí řízky se sardelemi</h2></a>
 
