--- a/src/salaty.html
+++ b/src/salaty.html
@@ -10,7 +10,7 @@
 
 <a id="hlavkovy-salat-s-kyselou-smetanou"><h2>Hlávkový salát s kyselou smetanou</h2></a>
 
-<p>Připrav hlávkový salát jako v předešlých receptech, dej ho do misky, sceď s něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a dobře to promíchej, pak salát na misce urovnej a posyp ho dobře nakrájenou pažitkou.</p>
+<p>Připrav hlávkový salát jako v předešlých předpisech, dej ho do misky, sceď s něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a dobře to promíchej, pak salát na misce urovnej a posyp ho dobře nakrájenou pažitkou.</p>
 
 <a id="hlavkovy-salat-se-slaninou"><h2>Hlávkový salát se slaninou</h2></a>
 
