--- a/src/sladke-rosoly.html
+++ b/src/sladke-rosoly.html
@@ -46,7 +46,7 @@
 
 <a id="rosol-malinovy"><h2>Rosol malinový</h2></a>
 
-<p>Několik žejdlíků pěkných zralých malin dej do čistého hrnku, postav je do nějaké velké nádoby vařící vodou naplněné, přikrej je a nech je vařit; pak čistou šťávu slej a odměř ji žejdlík k rosolu potřebný. Ostatní příprava je zcela stejná s rosolem jahodovým v předešlém receptu, jenom že se alkermesová šťáva vynechá.</p>
+<p>Několik žejdlíků pěkných zralých malin dej do čistého hrnku, postav je do nějaké velké nádoby vařící vodou naplněné, přikrej je a nech je vařit; pak čistou šťávu slej a odměř ji žejdlík k rosolu potřebný. Ostatní příprava je zcela stejná s rosolem jahodovým v předešlém předpisu, jenom že se alkermesová šťáva vynechá.</p>
 
 <a id="rosol-rybizovy"><h2>Rosol rybízový</h2></a>
 
@@ -110,7 +110,7 @@
 
 <a id="vanilovy-rosol-se-smetanovou-penou"><h2>Vanilový rosol se smetanovou pěnou</h2></a>
 
-<p>Do žejdlíka smetany vraz deset žloutků, dej k tomu čtvrt libry s kusem vanilky tlučeného cukru, a kloktej tím stále na ohni, až to zhoustne, načež to postav i s hrnkem do studené vody, proceď k tomu půl druhého lotu v žejdlíku vody přes noc máčeného a pak na šest lžic vyvařeného vyzího měchýře, a kloktej tím opět, až to vystydne. Potom udělej ze žejdlíku husté smetany pěnu dle předešlého receptu, přimíchej ji zvolna k té sedlině, vlej to do pěkné mísy, s kterou to přijde na stůl, a nech to ve studeném místě ztuhnout.</p>
+<p>Do žejdlíka smetany vraz deset žloutků, dej k tomu čtvrt libry s kusem vanilky tlučeného cukru, a kloktej tím stále na ohni, až to zhoustne, načež to postav i s hrnkem do studené vody, proceď k tomu půl druhého lotu v žejdlíku vody přes noc máčeného a pak na šest lžic vyvařeného vyzího měchýře, a kloktej tím opět, až to vystydne. Potom udělej ze žejdlíku husté smetany pěnu dle předešlého předpisu, přimíchej ji zvolna k té sedlině, vlej to do pěkné mísy, s kterou to přijde na stůl, a nech to ve studeném místě ztuhnout.</p>
 
 <a id="kavovy-rosol-se-smetanovou-penou"><h2>Kávový rosol se smetanovou pěnou</h2></a>
 
