--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -120,7 +120,7 @@
 
 <a id="teleci-hrudi-vyslanene"><h2>Telecí hrudí vyslaněné</h2></a>
 
-<p>Z telecího hrudí vytáhej kostí, přemej ho a s&nbsp;těmi též přísadami, jak v předešlém receptu udáno, vlož ho na kuthánek a nech ho jen chvilku dobře přikryté dusit; pak ho vyndej, trochu, ale ne mnoho osol, pokrájenou slaninou jako zajíce třeba šesti řadami protáhni, načež ho opět vlož na kuthan a nech dusit; nesmí také zčervenat, pročež musíš častěji po lžíci hovězí polívky přilévat. Asi půl hodiny předtím, než se má dát na tabuli, vyndej ho na jiný kuthánek, šťávu proceď, podlej ji pod hrudí, postav ho do horké trouby slaninou vzhůru, jak beztoho pořád ležet musí, a polévej ho pilně, až zčervená; pak ho vyndej na mísu, do šťávy přidej ze dvou sardelí sardelové máslo, zamíchej to a vlej na hrudí.</p>
+<p>Z telecího hrudí vytáhej kostí, přemej ho a s&nbsp;těmi též přísadami, jak v předešlém předpisu udáno, vlož ho na kuthánek a nech ho jen chvilku dobře přikryté dusit; pak ho vyndej, trochu, ale ne mnoho osol, pokrájenou slaninou jako zajíce třeba šesti řadami protáhni, načež ho opět vlož na kuthan a nech dusit; nesmí také zčervenat, pročež musíš častěji po lžíci hovězí polívky přilévat. Asi půl hodiny předtím, než se má dát na tabuli, vyndej ho na jiný kuthánek, šťávu proceď, podlej ji pod hrudí, postav ho do horké trouby slaninou vzhůru, jak beztoho pořád ležet musí, a polévej ho pilně, až zčervená; pak ho vyndej na mísu, do šťávy přidej ze dvou sardelí sardelové máslo, zamíchej to a vlej na hrudí.</p>
 
 <a id="teleci-hrudi-s-vinni-omackou"><h2>Telecí hrudí s vinní omáčkou</h2></a>
 
