Odkazy na recepty

--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -96,13 +96,13 @@
 <h3>Příklad první</h3>
 
 <ol>
-	<li>Bílá polívka s rejží</li>
+	<li><a href="polivky-masite.html#bila-polivka-s-rejzi-pro-6-osob">Bílá polívka s rejží</a></li>
 	<li>Hovězí maso houbičkami a zemčátky obložené, cibulková omáčka a kyselé okurky</li>
-	<li>Kuřátka s karfiolem</li>
-	<li>Pečená kachna</li>
-	<li>Hlávkový salát</li>
-	<li>Talíř důlkových koláčků</li>
-	<li>Pivo, víno, káva</li>
+	<li><a href="zeleniny.html#karfiol-s-kuratkami">Kuřátka s karfiolem</a></li>
+	<li><a href="pecene.html#husa-a-kachna">Pečená kachna</a></li>
+	<li><a href="salaty.html#salat-hlavkovy">Hlávkový salát</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#dulkove-kolace">Talíř důlkových koláčků</a></li>
+	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <h3>Příklad druhý</h3>
