--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -108,18 +108,18 @@
 <h3>Příklad druhý</h3>
 
 <ol>
-	<li>Polívka s moučným svítkem</li>
-	<li>Žemličkové řízky s jaterní dušeninkou</li>
-	<li>Hovězí maso rejží obložené, smetanový křen a červená řepa</li>
-	<li>Fašírovaná kapusta</li>
-	<li>Zadělávaní kapouni s ústřicemi</li>
-	<li>Kaštanový nákyp</li>
-	<li>Zvěřina s okolkem z máslového těsta</li>
-	<li>Pečené koroptve a telecí kýta</li>
-	<li>Švestkový kompot a hlávkový salát</li>
-	<li>Talíř oplatků a talíř spěšných rohlíčka</li>
+	<li><a href="polivky-masite.html#polivka-s-moucnym-svitkem">Polívka s moučným svítkem</a></li>
+	<li><a href="prichoutky-cili-asietky.html#zemlickove-rizky-s-jaterni-duseninkou">Žemličkové řízky s jaterní dušeninkou</a></li>
+	<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso</a> rejží obložené, <a href="omacky-k-hovezimu-masu.html#kren-smetanovy">smetanový křen</a> a <a href="nalozeniny-k-hovezimu-masu.html#nalozena-cervena-repa">červená řepa</a></li>
+	<li><a href="zeleniny.html#kapusta-fasirovana-pro-8-osob">Fašírovaná kapusta</a></li>
+	<li><a href="zadelavana-a-dusena-jidla.html#kapoun-s-muslemi">Zadělávaní kapouni s ústřicemi</a></li>
+	<li><a href="nakypy.html#nakyp-kastanovy">Kaštanový nákyp</a></li>
+	<li><a href="zadelavana-zverina.html#cerna-zverina-na-jiny-zpusob">Zvěřina s okolkem z máslového těsta</a></li>
+	<li><a href="pecene.html#koroptve-a-bazant">Pečené koroptve</a> a telecí kýta</li>
+	<li>Švestkový kompot a <a href="salaty.html#salat-hlavkovy">hlávkový salát</a></li>
+	<li>Talíř oplatků a talíř <a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#spesne-rohlicky">spěšných rohlíčků</a></li>
 	<li>Dva talíře ovoce</li>
-	<li>Pivo, víno, káva</li>
+	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <h3>Příklad třetí</h3>
