--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -125,20 +125,20 @@
 <h3>Příklad třetí</h3>
 
 <ol>
-	<li>Polívka dušená s míšeninkou</li>
-	<li>Nepravé mušle</li>
-	<li>Hovězí maso rejží a mrkvičkou obložené</li>
-	<li>Špenát s uzeným jazykem nebo s karbanátkami</li>
-	<li>Zadělávaná kuřata 8 houbičkami</li>
-	<li>Nákyp tvarohový</li>
-	<li>Dušené kachny, divoké aneb domácí, s okolkem z máslového těsta</li>
-	<li>Pečený zajíc a kapoun</li>
-	<li>Salát celerový a šípkový kompot</li>
-	<li>Šunka s aspikem</li>
-	<li>Žloutkové koláče</li>
-	<li>Mandlové obloučky, španělské větry, pokroutky z koření</li>
+	<li><a href="polivky-masite.html#dusena-polivka">Polívka dušená</a> s míšeninkou</li>
+	<li><a href="prichoutky-cili-asietky.html#neprave-musle">Nepravé mušle</a></li>
+	<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso</a> rejží a mrkvičkou obložené</li>
+	<li>Špenát s <a href="pecene.html#uzeny-hovezi-jazyk-a-sunka">uzeným jazykem</a> nebo s karbanátkami</li>
+	<li><a href="zadelavana-a-dusena-jidla.html#kurata-se-hribkami">Zadělávaná kuřata s houbičkami</a></li>
+	<li><a href="nakypy.html#nakyp-tvarohovy">Nákyp tvarohový</a></li>
+	<li><a href="zadelavana-zverina.html#divoka-kachna">Dušené kachny, divoké</a> aneb domácí, s okolkem z máslového těsta</li>
+	<li><a href="pecene.html#zajic">Pečený zajíc</a> a <a href="pecene.html#kapoun-na-zpusob-bazanta">kapoun</a></li>
+	<li><a href="salaty.html#salat-celerovy">Salát celerový</a> a <a href="ovocni-zavareninky.html#sipkova-zavareninka">šípkový kompot</a></li>
+	<li>Šunka s <a href="masite-rosoly.html#aspik">aspikem</a></li>
+	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#kolace-zloutkove">Žloutkové koláče</a></li>
+	<li><a href="cukrovinky.html#mandlove-obloucky">Mandlové obloučky</a>, <a href="cukrovinky.html#spanelske-vetry-a-mandlemi">španělské větry</a>, pokroutky z koření</li>
 	<li>Jablka, ořechy, vinní hrozníčky, švestky</li>
-	<li>Pivo, víno, káva</li>
+	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <h3>Příklad čtvrtý</h3>
