--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -227,13 +227,14 @@ Všeho dvě mísy. Po malé přestávce.
 <h3>Příklad první</h3>
 
 <ol>
-	<li>Obyčejná polívka z rybích vnitřností</li>
-	<li>Sazené vejce se sardelemi</li>
-	<li>Špenát se smaženými klobáskami nebo karbanátkami z ryb</li>
-	<li>Štika s citronem 5. Zemčatový nákyp</li>
-	<li>Smažený kapr se salátem</li>
-	<li>Talíř švédského chlebíčka, talíř mandlových kobližek</li>
-	<li>Dva talíře ovoce, pivo, víno, káva</li>
+	<li><a href="rybi-a-postni-polivky.html#obycejna-rybi-polivka">Obyčejná polívka z rybích vnitřností</a></li>
+	<li><a href="vejce.html#sazene-vejce-se-sardelemi">Sazené vejce se sardelemi</a></li>
+	<li>Špenát se <a href="jeste-nektera-postni-jidla.html#karbanatky-a-klobasy-z-kapra">smaženými klobáskami nebo karbanátkami z ryb</a></li>
+	<li><a href="rozlicne-ryby.html#stika-s-citronovou-omackou">Štika s citronem</a></li>
+	<li><a href="nakypy.html#nakyp-zemcatovy">Zemčatový nákyp</a></li>
+	<li><a href="rozlicne-ryby.html#kapr-smazeny">Smažený kapr</a> se salátem</li>
+	<li>Talíř <a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#svedsky-chlebicek">švédského chlebíčka</a>, talíř <a href="cukrovinky.html#mandlove-koblizky-s-rybizem">mandlových kobližek</a></li>
+	<li>Dva talíře ovoce, pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <h3>Příklad druhý</h3>
@@ -246,7 +247,7 @@ Všeho dvě mísy. Po malé přestávce.
 	<li>Zadělávané žáby</li>
 	<li>Pečený ouhoř nebo mníci</li>
 	<li>Koláčky z koření, oplatky nebo trubičky</li>
-	<li>Dva talíře ovoce, pivo, víno, káva</li>
+	<li>Dva talíře ovoce, pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <h3>Příklad třetí</h3>
@@ -297,7 +298,7 @@ Všeho dvě mísy. Po malé přestávce.
 	<li>Cukrová šunka</li>
 	<li>Komisní chlebíček</li>
 	<li>Linecký dort</li>
-	<li>Pivo, víno, káva</li>
+	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
 <p>Dle těchto příkladů se může kuchařka řídit. V postní den není radno hostina dávat, leda když se tomu vyhnouti nelze; v tom pádu se musí kuchařka řídit dle ryb, které jsou k dostání. Rozmnožit se to nechá, když se dají dvoje zadělávané a dvoje pečené nebo smažené ryby, dva nákypy, které si nejsou podobny, ku př. španělské větry se šodó a nákyp z omeletek. Taktéž rosolované, pečené á smažené ryby mohou se dle libosti rozmnožit a na rozličný způsob připravit.</p>
